syntax = "proto3";

package eclipseorigins.protocol.v1;

option csharp_namespace = "EclipseOrigins.Shared.Protocol.V1";

message FeatureFlags {
  repeated string values = 1;
}

message Vector2 {
  float x = 1;
  float y = 2;
}
